tests/errors/test_43.x
// No appropriate function

fn foo() -> void {

}

fn bar(a: i64) -> i64 {
    return 0;
}

fn main() -> void {

    foo(2);
    bar();

}